--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-img {
+/* img {
     width: 55%;
     height: 400px;
     display: block;
@@ -13,4 +13,4 @@ img {
 button {
     width: 70px;
     height: 30px;
-}
+} */
