--- a/style.css
+++ b/style.css
@@ -14,3 +14,29 @@ button {
     width: 70px;
     height: 30px;
 } */
+h1 {
+    text-align: center;
+    margin: auto;
+    width: 50%;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    padding: 15px 0;
+}
+p {
+    width: 70%;
+    margin: auto;
+    padding-top: 25px;
+    font-size: 20px;
+    line-height: 30px;
+}
+.links {
+    margin: 30px auto 0 auto;
+    text-align: center;
+}
+a {
+    padding: 20px;
+    
+}
