--- a/style.css
+++ b/style.css
@@ -44,3 +44,16 @@ a {
     width: 300px;
     height: 300px;
 } */
+
+.box1 {
+    width: 200px;
+    height: 120px;
+    margin: 30px;
+    cursor: pointer;
+    background-color: aquamarine;
+    color: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
