--- a/blur loading/style.css
+++ b/blur loading/style.css
@@ -17,9 +17,9 @@ body {
         height: 100vh;
         position: absolute;
         z-index: -1;
-        /* filter: blur(40px);
-        -webkit-filter: blur(40px); */
-    }
+        filter: blur(0);
+        -webkit-filter: blur(0);
+}
 
     .text {
         font-size: 40px;
