--- a/countDown/style.css
+++ b/countDown/style.css
@@ -15,7 +15,7 @@ body {
     align-items: center;
 
     section {
-        width: 60%;
+        width: 40vw;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
@@ -32,9 +32,16 @@ body {
         .countDown {
             display: flex;
             justify-content: space-evenly;
+            flex-wrap: wrap;
             div {
                 text-align: center;
                 font-size: large;
+                min-width: 100px;
+                margin: 10px 0;
+
+                p {
+                    font-weight: bold;
+                }
             }
         }
     }
