--- a/Alibaba/styles/all.css
+++ b/Alibaba/styles/all.css
@@ -36,14 +36,39 @@
 body {
     font-family: "Alibaba-Regular", Helvetica, sans-serif;
     background-color: #F6F6F6;
+    overflow: hidden;
 }
 
 .flex-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    /* flex-wrap: wrap; */
+}
+
+.flex-row1 {
+    display: flex;
+    align-items: center;
+    /* flex-wrap: wrap; */
 }
 
 .px {
     padding: 0 40px;
+}
+
+.positionRel {
+    position: relative;
+}
+
+.border {
+    border: 1px solid #0000001a;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.display {
+    display: block !important;
 }
