--- a/Alibaba/styles/all.css
+++ b/Alibaba/styles/all.css
@@ -36,24 +36,35 @@
 body {
     font-family: "Alibaba-Regular", Helvetica, sans-serif;
     background-color: #F6F6F6;
-    overflow: hidden;
+    overflow-x: hidden;
+    position: relative;
 }
 
 .flex-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-direction: row-reverse;
     /* flex-wrap: wrap; */
 }
 
 .flex-row1 {
     display: flex;
     align-items: center;
-    /* flex-wrap: wrap; */
+}
+
+.flex-col {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .px {
     padding: 0 40px;
+}
+.mx {
+    margin: 0 40px;
 }
 
 .positionRel {
@@ -62,6 +73,14 @@ body {
 
 .border {
     border: 1px solid #0000001a;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.border-radius {
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
