--- a/Alibaba/styles/style.css
+++ b/Alibaba/styles/style.css
@@ -13,6 +13,8 @@ header {
     width: 100%;
     height: 70px;
     background: var(--white);
+    position: sticky;
+    flex-direction: row !important;
     
     * {
         font-size: var(--fontSize);
@@ -41,8 +43,7 @@ header {
             height: 90px;
             top: 180%;
             right: -20px;
-
-            li {
+            li{
                 padding-bottom: 10px;
                 &:first-child {
                     border-bottom: 1px solid var(--lightGray);
@@ -51,7 +52,6 @@ header {
         }
 
         ul {
-            flex-direction: row-reverse;
             width: 100%;
             flex-wrap: wrap;
 
@@ -84,6 +84,53 @@ header {
             p {
                 font-size: .8vw;
             }
+        }
+    }
+}
+
+.banner {
+    width: 100vw;
+    height: 320px;
+    position: relative;
+    
+    .banner-imgs {
+        width: 100%;
+        height: 100%;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    .banner-ticket {
+        width: 94%;
+        height: 300px;
+        position: absolute;
+        top: 220px;
+        background: var(--white);
+        
+        .banner-list {
+            height: 150px;
+            padding: 10px 0;
+            .banner-lists {
+                height: 90px;
+                .lists {
+                    justify-content: center;
+                    flex-wrap: wrap;
+                    height: 100%;
+                    border-bottom: 1px solid var(--lightGray);
+                    li {
+                        height: 100%;
+                        color: var(--texts);
+                    }
+                }
+            }
+        }
+
+        .choose {
+            text-align: right;
+            margin: 30px 100px 0 0;
         }
     }
 }
