--- a/website/styles/style.css
+++ b/website/styles/style.css
@@ -302,6 +302,107 @@ nav {
 }
 
 
+/*=================== BLOG ===================*/
+.main {
+    background: var(--background-secondary);
+    padding: var(--py) 0;
+
+    .blog {
+        .h2 {
+            line-height: 1.3;
+            margin-bottom: 3rem;
+            text-align: center;
+        }
+
+        .blog-card {
+            background: var(--background-primary);
+            padding: 10px;
+            margin-bottom: 1rem;
+            border-radius: 10px;
+            box-shadow: 0 10px 10px hsla(0, 0%, 0%, 0.05);
+            transition: 0.25s ease;
+            
+            &:hover {
+                transform: translateY(-3px);
+                box-shadow: 0 10px 10px hsla(0, 0%, 0%, 0.1);
+            }
+
+            .blog-content-wrapper {
+                padding: 10px 5px;
+
+                .blog-topic {
+                    background: var(--action-primary);
+                    color: var(--foreground-secondary);
+                    font-weight: 600;
+                    padding: 0.25rem 1rem;
+                    border-radius: 5px;
+                    margin-bottom: 1rem;
+                    transition: all 0.2s;
+                    -webkit-transition: all 0.2s;
+                    -moz-transition: all 0.2s;
+                    -ms-transition: all 0.2s;
+                    -o-transition: all 0.2s;
+                    &:hover {
+                        background: var(--foreground-secondary);
+                        color: var(--action-secondary);
+                    }
+                }
+            }
+
+            .h3 {
+                line-height: 1.5;
+                margin-bottom: 1rem;
+                transition: all 0.2s;
+
+                &:hover {
+                    text-decoration: underline;
+                    text-decoration-thickness: 2px;
+                }
+            }
+
+            .blog-text,
+            .profile-wrapper {
+                display: none;
+            }
+
+            .wrapper {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex-wrap: wrap;
+                gap: 15px;
+
+                .h4 {
+                    color: var(--foreground-secondary);
+
+                    &.h4:hover {
+                        color: var(--accent);
+                    }
+                }
+
+                .text-sm {
+                    display: flex;
+                    align-items: center;
+                    gap: 5px;
+                    color: var(--foreground-tertiary);
+                }
+            }
+        }
+        .load-more {
+            margin: auto;
+            background: var(--foreground-secondary);
+            color: var(--background-secondary);
+            padding: 0.6rem 1.2rem;
+            transition: all 0.2s;
+
+            &:hover {
+                background: var(--accent);
+            }
+        }
+    }
+}
+
+
 /*=============== scrollbar style ===============*/
 ::-webkit-scrollbar {
     width: 16px;
